--- a/index.html
+++ b/index.html
@@ -159,14 +159,14 @@
           <div class="timeline-panel left">
             <h4>Light Breakfast</h4>
             <p>All</p>
-            <span class="date">18.01.2017 | 10:00</span>
+            <span class="date">10:00</span>
           </div>
         </li>
 	     <li class="animated hiding" data-animation="fadeInRight">
           <div class="timeline-panel right">
-            <h4>Welcome Dinner</h4>
-            <p>Buddakan</p>
-            <span class="date">17.10.2016 | 20:30</span>
+            <h4>Welcome</h4>
+            <p>Marianne Stroehmann</p>
+            <span class="date">Welcome - From conversion to customer-centric Marketing | 10:30</span>
           </div>
         </li>
         	<li class="year">Di.</li>
