--- a/index.html
+++ b/index.html
@@ -169,12 +169,12 @@
             <span class="date">Welcome - From conversion to customer-centric Marketing | 10:30</span>
           </div>
         </li>
-        	<li class="year">Di.</li>
+        	<!--<li class="year">Di.</li> -->
            <li class="animated hiding" data-animation="fadeInRight">
           <div class="timeline-panel right">
-            <h4>Welcome</h4>
-            <p>Petri Kokko</p>
-            <span class="date">18.10.2016 | 09:00 - 09:15</span>
+            <h4>Keynote 1 - Measurement and Attribution - Why?</h4>
+            <p>Oliver Borm, Stefan Schnabl, Joan Arensman </p>
+            <span class="date">Attribution, Analytics & Automation - Why? | 09:00 - 09:15</span>
           </div>
         </li>
            <li class="animated hiding" data-animation="fadeInLeft">
