--- a/index.html
+++ b/index.html
@@ -159,14 +159,14 @@
           <div class="timeline-panel left">
             <h4>Light Breakfast</h4>
             <p>All</p>
-            <span class="date">10:00</span>
+            <span class="date">10:00 – 10:30</span>
           </div>
         </li>
 	     <li class="animated hiding" data-animation="fadeInRight">
           <div class="timeline-panel right">
             <h4>Welcome</h4>
             <p>Marianne Stroehmann</p>
-            <span class="date">Welcome - From conversion to customer-centric Marketing | 10:30</span>
+            <span class="date">Welcome – From conversion to customer-centric Marketing | 10:30 – 10:45</span>
           </div>
         </li>
         	<!--<li class="year">Di.</li> -->
@@ -174,98 +174,98 @@
           <div class="timeline-panel right">
             <h4>Keynote 1 - Measurement and Attribution - Why?</h4>
             <p>Oliver Borm, Stefan Schnabl, Joan Arensman </p>
-            <span class="date">Attribution, Analytics & Automation - Why? | 09:00 - 09:15</span>
+            <span class="date">Attribution, Analytics & Automation – Why? | 10:45 – 11:30</span>
           </div>
         </li>
            <li class="animated hiding" data-animation="fadeInLeft">
           <div class="timeline-panel left">
-            <h4>Welcome & Introduction</h4>
-            <p>Melania van Hümmel</p>
-            <span class="date">18.10.2016 | 09:15 - 09:45</span>
+            <h4>Kundencase</h4>
+            <p>tbd</p>
+            <span class="date">Customer Case – to be defined | 11:30 - 12:15</span>
           </div>
         </li>
               <li class="animated hiding" data-animation="fadeInRight">
           <div class="timeline-panel right">
-            <h4>Insights of an US performance agency</h4>
-            <p>George Manas, President Resolution Media</p>
-            <span class="date">18.10.2016 | 09:45 - 10:15</span>
-          </div>
-        </li>
-            <li class="animated hiding" data-animation="fadeInLeft">
-          <div class="timeline-panel left">
-            <h4>Performance meets Creative</h4>
-            <p>Rudi Anggono</p>
-            <span class="date">18.10.2016 | 10:15 - 11:00</span>
-          </div>
-        </li>
-            <li class="animated hiding" data-animation="fadeInRight">
-          <div class="timeline-panel right">
-            <h4>Break</h4>
-            <p>All</p>
-            <span class="date">18.10.2016 | 11:00 - 11:15</span>
-          </div>
-        </li>
-            <li class="animated hiding" data-animation="fadeInLeft">
-          <div class="timeline-panel left">
-            <h4>Branding - YouTube</h4>
-            <p>Tobias Walter</p>
-            <span class="date">18.10.2016 | 11:15 - 12:00</span>
-          </div>
-        </li>
-            <li class="animated hiding" data-animation="fadeInRight">
-          <div class="timeline-panel right">
-            <h4>Morning re-cap</h4>
-            <p>All</p>
-            <span class="date">18.10.2016 | 12:00 - 12:15</span>
-          </div>
-        </li>
-            <li class="animated hiding" data-animation="fadeInLeft">
-          <div class="timeline-panel left">
             <h4>Lunch</h4>
-            <p>Google Canteen</p>
-            <span class="date">18.10.2016 | 12:15 - 13:30</span>
-          </div>
-        </li>
-            <li class="animated hiding" data-animation="fadeInRight">
-          <div class="timeline-panel right">
-            <h4>Campus Tour</h4>
-            <p>André Moraes</p>
-            <span class="date">18.10.2016 | 13:30 - 14:00</span>
-          </div>
-        </li>
-            <li class="animated hiding" data-animation="fadeInLeft">
-          <div class="timeline-panel left">
-            <h4>Online to Store</h4>
-            <p>Sam Duncan</p>
-            <span class="date">18.10.2016 | 14:00 - 14:45</span>
-          </div>
-        </li>
-            <li class="animated hiding" data-animation="fadeInRight">
-          <div class="timeline-panel right">
-            <h4>The Future of Google Shopping</h4>
-            <p>Joe Rosenberg</p>
-            <span class="date">18.10.2016 | 14:45 - 15:30</span>
-          </div>
-        </li>
-            <li class="animated hiding" data-animation="fadeInLeft">
-          <div class="timeline-panel left">
-            <h4>Break</h4>
             <p>All</p>
-            <span class="date">18.10.2016 | 15:30 - 15:45</span>
+            <span class="date">12:15 - 13:15</span>
+          </div>
+        </li>
+            <li class="animated hiding" data-animation="fadeInLeft">
+          <div class="timeline-panel left">
+            <h4>Breakout 1</h4>
+            <p>Christoph Roscheck & Arne Laudien</p>
+            <span class="date">Basics of customer-centric measurement: Fundamentals, Benefits & Data Privacy | 13:15 - 14:00</span>
+          </div>
+        </li>
+            <li class="animated hiding" data-animation="fadeInRight">
+          <div class="timeline-panel right">
+            <h4>Breakout 2</h4>
+            <p>Miriam Tappe</p>
+            <span class="date">Measuring Customer Journey from Online to your Store | 13:15 - 14:00</span>
+          </div>
+        </li>
+            <li class="animated hiding" data-animation="fadeInLeft">
+          <div class="timeline-panel left">
+            <h4>Breakout 3</h4>
+            <p>Jan Wittek</p>
+            <span class="date">Customer Journey and Cross-Channel Attribution in Google Analytics 360 Suite | 14:00 - 14:45</span>
+          </div>
+        </li>
+            <li class="animated hiding" data-animation="fadeInRight">
+          <div class="timeline-panel right">
+            <h4>Breakout 4</h4>
+            <p>Livia von Mitschke-Collande</p>
+            <span class="date">YouTube for Performance & Measurement Best Practices | 14:00 - 14:45</span>
+          </div>
+        </li>
+            <li class="animated hiding" data-animation="fadeInLeft">
+          <div class="timeline-panel left">
+            <h4>Coffee Break</h4>
+            <p>All</p>
+            <span class="date">14:45 - 15:15</span>
+          </div>
+        </li>
+            <li class="animated hiding" data-animation="fadeInRight">
+          <div class="timeline-panel right">
+            <h4>Breakout 5</h4>
+            <p>Martin Loss</p>
+            <span class="date">Mobile Measurement: AdWords Attribution incl. Cross-Device | 15:15 - 16:00</span>
+          </div>
+        </li>
+            <li class="animated hiding" data-animation="fadeInLeft">
+          <div class="timeline-panel left">
+            <h4>Breakout 6</h4>
+            <p>Denis Dautaj & Reemda Tieben</p>
+            <span class="date">Automation by Google: AdWords Smart Bidding & DoubleClick Bid Strategies | 15:15 - 16:00</span>
+          </div>
+        </li>
+            <li class="animated hiding" data-animation="fadeInRight">
+          <div class="timeline-panel right">
+            <h4>Breakout 7</h4>
+            <p>Tobias Scheurle</p>
+            <span class="date">Google Analytics – How to tackle an Analytics implementation in your orgaization | 15:15 - 16:00</span>
+          </div>
+        </li>
+            <li class="animated hiding" data-animation="fadeInLeft">
+          <div class="timeline-panel left">
+            <h4>Keynote 2 – Future of Attribution</h4>
+            <p>Domi Wöber</p>
+            <span class="date">The Future of Attribution | 16:00 - 16:45</span>
           </div>
         </li>
 	   <li class="animated hiding" data-animation="fadeInRight">
           <div class="timeline-panel right">
-            <h4>Cross-Device Conversions - Attribution</h4>
-            <p>Marlena Laszkowska</p>
-            <span class="date">18.10.2016 | 15:45 - 16:15</span>
+            <h4>Wrap Up</h4>
+            <p>Marianne Stroehmann</p>
+            <span class="date">16:45 - 17:00</span>
           </div>
         </li>
 	<li class="animated hiding" data-animation="fadeInLeft">
           <div class="timeline-panel left">
-            <h4>Mobile Trends & New Technologies</h4>
-            <p>Lauren Epshteyn</p>
-            <span class="date">18.10.2016 | 16:15 - 17:00</span>
+            <h4>Networking</h4>
+            <p>All</p>
+            <span class="date">17:00 - 17:45</span>
           </div>
         </li>
 	<li class="animated hiding" data-animation="fadeInRight">
