--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
             <span class="date">17:00 - 17:45</span>
           </div>
         </li>
-	<li class="animated hiding" data-animation="fadeInRight">
+	<!--<li class="animated hiding" data-animation="fadeInRight">
           <div class="timeline-panel right">
             <h4>DS Vision, Roadmap, and Smart Bidding deep-dive</h4>
             <p>Christina Connor</p>
@@ -344,7 +344,7 @@
             <h4>Abreise</h4>
             <p>ALL</p>
             <span class="date">19.10.2016 | 13:00</span>
-          </div>
+          </div>-->
         
 	    <li class="year"><i class="fa fa-road"></i></li>
         </ul>
