--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
   <link id="test" rel="stylesheet" type="text/css" href="css/colors/blue.css">
 
   <!-- Fonts -->
-	<link href='https://fonts.googleapis.com/css?family=Roboto+Slab" rel="stylesheet'type='text/css'>
-  <link href="https://fonts.googleapis.com/css?family=Lato:400,700" rel="stylesheet" type="text/css">
+	<link href='https://fonts.googleapis.com/css?family=Alegreya+Sans+SC:400,500,700' rel='stylesheet' type='text/css'>
+	<link href="https://fonts.googleapis.com/css?family=Lato:400,700" rel="stylesheet" type="text/css">
 
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
