--- a/index.html
+++ b/index.html
@@ -56,6 +56,15 @@
       <li><div class="slide slide3"></div></li>
       <li><div class="slide slide4"></div></li>
       <li><div class="slide slide5"></div></li>
+	<li><div class="slide slide6"></div></li>
+	<li><div class="slide slide7"></div></li>
+	<li><div class="slide slide8"></div></li>
+	<li><div class="slide slide9"></div></li>
+	<li><div class="slide slide10"></div></li>
+	<li><div class="slide slide11"></div></li>
+	<li><div class="slide slide12"></div></li>
+	<li><div class="slide slide13"></div></li>
+	<li><div class="slide slide14"></div></li>
     </ul>
   </div>
   <!-- End Background -->
