--- a/index.html
+++ b/index.html
@@ -87,7 +87,6 @@
           <li class="active"><a href="#home">Home</a></li>
           <li><a href="#about">About</a></li>
           <li><a href="#agenda">Agenda</a></li>
-          <li><a href="#impressions">Impressionen</a></li>
           <li><a href="#contacts">Kontakte</a></li>
         </ul>
       </div>
@@ -389,7 +388,7 @@
   </section>
   <!-- End Call to action -->
   <!-- Works -->
-  <section id="impressions">
+  <!--<section id="impressions">
     <div class="container">
       <div class="title">
         <h1>Impressionen</h1>
@@ -509,7 +508,8 @@
             </a>
       </ul>
     </div>    
-  </section>
+  </section>-->
+	 
   <!-- End Works -->
   <!-- Services -->
   <section id="contacts">
