--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
   <!-- Fonts -->
 	<!-- <link href='https://fonts.googleapis.com/css?family=Alegreya+Sans+SC:400,500,700' rel='stylesheet' type='text/css'>-->
 	<link href="https://fonts.googleapis.com/css?family=Roboto+Slab" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css?family=Lato:400,700" rel="stylesheet" type="text/css">
+	<link href="https://fonts.googleapis.com/css?family=Roboto:300" rel="stylesheet">
+	<!-- <link href="https://fonts.googleapis.com/css?family=Lato:400,700" rel="stylesheet" type="text/css">-->
 
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
