--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
   <section id="about">
     <div class="container">
       <div class="picture">
-        <img src="images/team/melaniavanh.png" width="100%" class="img-circle">
+        <img src="images/team/google-round.png" width="100%" class="img-circle">
       </div>
       <div class="title">
         <h1>Willkommen!</h1>
