--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="#">CEO Summit NYC</a>
+        <a class="navbar-brand" href="#">AAA Vertical Summit 2017</a>
       </div>
       <div class="collapse navbar-collapse" id="navigation">
         <ul class="nav navbar-nav navbar-right" id="nav">
