--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
   <meta charset="utf-8">
   <title>AAA Summit</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Mediacom Executive Summit in NYC with Google">
-  <meta name="keywords" content="CEO, CEO Summit NYC, NYC, Google">
+  <meta name="description" content="AAA Summit">
+  <meta name="keywords" content="AAA Summit">
 
   <!--[if lt IE 9]>
     <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
@@ -99,7 +99,8 @@
   <div id="home">
     <div class="banner">
       <div class="container">
-        <h1>AAA Vertical Summit 2017</h1>
+        <h1>Attribution Automation Analytics</h1>
+	      <h1>Summit 2017</h1>
         <div id="home-slider" class="flexslider">
           <ul class="slides">
             <li><h3>Attribution. Automation. Analytics.</h3></li>
