--- a/index.html
+++ b/index.html
@@ -100,6 +100,9 @@
     <div class="banner">
       <div class="container">
         <h2>Attribution Automation Analytics</h2>
+	       <div class="picture">
+        <img src="images/team/Triple-A-LOGO-standalone.png" width="100%">
+      </div>
 	      <h1>Summit 2017</h1>
         <div id="home-slider" class="flexslider">
           <ul class="slides">
