--- a/index.html
+++ b/index.html
@@ -163,12 +163,12 @@
   <!-- Timeline -->
   <section id="agenda">
     <div class="title">
-      <h1>Die Agenda</h1>
+      <h1>Agenda</h1>
       <hr>
     </div>
       <div class="container">
         <ul class="timeline">
-        <li class="year">Mi.</li>
+        <li class="year">18.1.17</li>
            <li class="animated hiding" data-animation="fadeInLeft">
           <div class="timeline-panel right">
             <h4>Light Breakfast</h4>
