--- a/index.html
+++ b/index.html
@@ -100,7 +100,8 @@
     <div class="banner">
       <div class="container">
         <h2>Attribution Automation Analytics</h2>
-	       <div class="container">
+	       </div>
+	      <div class="container">
 	       <div class="picture">
         <img src="images/team/Triple-A-LOGO-standalone.png" width="100%">
       </div>
