--- a/index.html
+++ b/index.html
@@ -100,12 +100,11 @@
     <div class="banner">
       <div class="container">
         <h2>Attribution Automation Analytics</h2>
-	       </div>
-	      <div class="container">
-	       <div class="picture">
-        <img src="images/team/Triple-A-LOGO-standalone.png" width="100%">
-      </div>
 	      <h1>Summit 2017</h1>
+	      <div class="container">
+      <div class="picture">
+        <img src="images/team/google-round125.png" width="100%" class="img-circle">
+      </div>
         <div id="home-slider" class="flexslider">
           <ul class="slides">
             <!--Hello World-->
