--- a/index.html
+++ b/index.html
@@ -177,15 +177,15 @@ Der Fokus aller Sessions soll auf der Umsetzung dieser unterschiedlichen Lösung
           <div class="timeline-panel left">
             <h4>Welcome</h4>
             <p>Marianne Stroehmann</p>
-            <span class="date">Welcome – From conversion to customer-centric Marketing | 10:30 – 10:45</span>
+            <span class="date">From conversion to customer-centric Marketing | 10:30 – 10:45</span>
           </div>
         </li>
         	<!--<li class="year">Di.</li> -->
            <li class="animated hiding" data-animation="fadeInRight">
           <div class="timeline-panel right">
-            <h4>Keynote 1 - Measurement and Attribution - Why?</h4>
-            <p>Oliver Borm, Stefan Schnabl, Joan Arensman </p>
-            <span class="date">Attribution, Analytics & Automation – Why? | 10:45 – 11:30</span>
+            <h4>Keynote - Measurement and Attribution - Why?</h4>
+            <p>tbd </p>
+            <span class="date"> 10:45 – 11:30 | Attribution, Analytics & Automation – Why?  </span>
           </div>
         </li>
            <li class="animated hiding" data-animation="fadeInLeft">
