--- a/index.html
+++ b/index.html
@@ -204,14 +204,14 @@ Der Fokus aller Sessions soll auf der Umsetzung dieser unterschiedlichen Lösung
         </li>
             <li class="animated hiding" data-animation="fadeInLeft">
           <div class="timeline-panel left">
-            <h4>Breakout 1</h4>
+            <h4>Breakout</h4>
             <p>Christoph Roscheck & Arne Laudien</p>
             <span class="date">Basics of customer-centric measurement: Fundamentals, Benefits & Data Privacy | 13:15 - 14:00</span>
           </div>
         </li>
-            <li class="animated hiding" data-animation="fadeInRight">
-          <div class="timeline-panel right">
-            <h4>Breakout 2</h4>
+              <li class="animated hiding" data-animation="fadeInLeft">
+          <div class="timeline-panel left">
+            <h4>Breakout</h4>
             <p>Miriam Tappe</p>
             <span class="date">Measuring Customer Journey from Online to your Store | 13:15 - 14:00</span>
           </div>
