--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@ Der Fokus aller Sessions soll auf der Umsetzung dieser unterschiedlichen Lösung
         	<!--<li class="year">Di.</li> -->
            <li class="animated hiding" data-animation="fadeInRight">
           <div class="timeline-panel right">
-            <h4>Keynote - Measurement and Attribution - Why?</h4>
+            <h4>Keynote: Measurement and Attribution - Why?</h4>
             <p>tbd </p>
             <span class="date"> 10:45 – 11:30 | Attribution, Analytics & Automation – Why?  </span>
           </div>
@@ -216,16 +216,16 @@ Der Fokus aller Sessions soll auf der Umsetzung dieser unterschiedlichen Lösung
             <span class="date">Measuring Customer Journey from Online to your Store | 13:15 - 14:00</span>
           </div>
         </li>
-            <li class="animated hiding" data-animation="fadeInLeft">
-          <div class="timeline-panel left">
-            <h4>Breakout 3</h4>
+           <li class="animated hiding" data-animation="fadeInRight">
+          <div class="timeline-panel right">
+            <h4>Breakout</h4>
             <p>Jan Wittek</p>
             <span class="date">Customer Journey and Cross-Channel Attribution in Google Analytics 360 Suite | 14:00 - 14:45</span>
           </div>
         </li>
             <li class="animated hiding" data-animation="fadeInRight">
           <div class="timeline-panel right">
-            <h4>Breakout 4</h4>
+            <h4>Breakout</h4>
             <p>Livia von Mitschke-Collande</p>
             <span class="date">YouTube for Performance & Measurement Best Practices | 14:00 - 14:45</span>
           </div>
