--- a/index.html
+++ b/index.html
@@ -220,14 +220,14 @@ Der Fokus aller Sessions soll auf der Umsetzung dieser unterschiedlichen Lösung
           <div class="timeline-panel right">
             <h4>Breakout</h4>
             <p>Jan Wittek</p>
-            <span class="date">Customer Journey and Cross-Channel Attribution in Google Analytics 360 Suite | 14:00 - 14:45</span>
+            <span class="date">14:00 - 14:45 | Customer Journey and Cross-Channel Attribution in Google Analytics 360 Suite</span>
           </div>
         </li>
             <li class="animated hiding" data-animation="fadeInRight">
           <div class="timeline-panel right">
             <h4>Breakout</h4>
             <p>Livia von Mitschke-Collande</p>
-            <span class="date">YouTube for Performance & Measurement Best Practices | 14:00 - 14:45</span>
+            <span class="date">14:00 - 14:45 | YouTube for Performance & Measurement Best Practices</span>
           </div>
         </li>
             <li class="animated hiding" data-animation="fadeInLeft">
@@ -239,29 +239,23 @@ Der Fokus aller Sessions soll auf der Umsetzung dieser unterschiedlichen Lösung
         </li>
             <li class="animated hiding" data-animation="fadeInRight">
           <div class="timeline-panel right">
-            <h4>Breakout 5</h4>
+            <h4>Breakout</h4>
             <p>Martin Loss</p>
-            <span class="date">Mobile Measurement: AdWords Attribution incl. Cross-Device | 15:15 - 16:00</span>
+            <span class="date">  Mobile Measurement: AdWords Attribution incl. Cross-Device</span>
           </div>
         </li>
-            <li class="animated hiding" data-animation="fadeInLeft">
-          <div class="timeline-panel left">
-            <h4>Breakout 6</h4>
-            <p>Denis Dautaj & Reemda Tieben</p>
-            <span class="date">Automation by Google: AdWords Smart Bidding & DoubleClick Bid Strategies | 15:15 - 16:00</span>
-          </div>
-        </li>
-            <li class="animated hiding" data-animation="fadeInRight">
+           <li class="animated hiding" data-animation="fadeInRight">
           <div class="timeline-panel right">
-            <h4>Breakout 7</h4>
-            <p>Tobias Scheurle</p>
-            <span class="date">Google Analytics – How to tackle an Analytics implementation in your orgaization | 15:15 - 16:00</span>
+            <h4>Breakout </h4>
+            <p>Denis Dautaj & Reemda Tieben</p>
+            <span class="date">15:15 - 16:00 | Automation by Google: AdWords Smart Bidding & DoubleClick Bid Strategies</span>
           </div>
         </li>
+            
             <li class="animated hiding" data-animation="fadeInLeft">
           <div class="timeline-panel left">
-            <h4>Keynote 2 – Future of Attribution</h4>
-            <p>Domi Wöber</p>
+            <h4>Keynote: Future of Attribution</h4>
+            <p>tbd</p>
             <span class="date">The Future of Attribution | 16:00 - 16:45</span>
           </div>
         </li>
