--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@ Der Fokus aller Sessions soll auf der Umsetzung dieser unterschiedlichen Lösung
           <div class="timeline-panel right">
             <h4>Breakout</h4>
             <p>Jan Wittek</p>
-            <span class="date">14:00 - 14:45 | Customer Journey and Cross-Channel Attribution in Google Analytics 360 Suite</span>
+            <span class="date">14:00 - 14:45 | Google Analytics und Cross-Channel Attribution</span>
           </div>
         </li>
             <li class="animated hiding" data-animation="fadeInRight">
@@ -241,7 +241,7 @@ Der Fokus aller Sessions soll auf der Umsetzung dieser unterschiedlichen Lösung
           <div class="timeline-panel right">
             <h4>Breakout</h4>
             <p>Martin Loss</p>
-            <span class="date">  Mobile Measurement: AdWords Attribution incl. Cross-Device</span>
+            <span class="date"> 15:15 - 16:00 | Mobile Measurement: AdWords Attribution incl. Cross-Device</span>
           </div>
         </li>
            <li class="animated hiding" data-animation="fadeInRight">
