--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@ Der Fokus aller Sessions soll auf der Umsetzung dieser unterschiedlichen Lösung
           <div class="timeline-panel right">
             <h4>Wrap Up</h4>
             <p>Marianne Stroehmann</p>
-            <span class="date">16:45 - 17:00</span>
+		  <span class="date"><b>16:45 - 17:00</b></span>
           </div>
         </li>
 	<li class="animated hiding" data-animation="fadeInLeft">
