--- a/index.html
+++ b/index.html
@@ -165,19 +165,19 @@ Der Fokus aller Sessions soll auf der Umsetzung dieser unterschiedlichen Lösung
     </div>
       <div class="container">
         <ul class="timeline">
-        <li class="year">18.1.17</li>
+        <li class="year">18.1.</li>
            <li class="animated hiding" data-animation="fadeInLeft">
           <div class="timeline-panel right">
             <h4>Light Breakfast</h4>
             <p>All</p>
-            <span class="date">10:00 – 10:30</span>
+		  <span class="date"><b>10:00 – 10:30</b></span>
           </div>
         </li>
 	     <li class="animated hiding" data-animation="fadeInRight">
           <div class="timeline-panel left">
             <h4>Welcome</h4>
             <p>Marianne Stroehmann</p>
-            <span class="date">From conversion to customer-centric Marketing | 10:30 – 10:45</span>
+            <span class="date">From conversion to customer-centric Marketing | <b>10:30 – 10:45</b></span>
           </div>
         </li>
         	<!--<li class="year">Di.</li> -->
@@ -185,70 +185,70 @@ Der Fokus aller Sessions soll auf der Umsetzung dieser unterschiedlichen Lösung
           <div class="timeline-panel right">
             <h4>Keynote: Measurement and Attribution - Why?</h4>
             <p>tbd </p>
-            <span class="date"> 10:45 – 11:30 | Attribution, Analytics & Automation – Why?  </span>
+            <span class="date"> <b>10:45 – 11:30</b> | Attribution, Analytics & Automation – Why?  </span>
           </div>
         </li>
            <li class="animated hiding" data-animation="fadeInLeft">
           <div class="timeline-panel left">
             <h4>Kundencase</h4>
             <p>tbd</p>
-            <span class="date">Customer Case – to be defined | 11:30 - 12:15</span>
+            <span class="date">Customer Case – to be defined | <b>11:30 - 12:15</b></span>
           </div>
         </li>
               <li class="animated hiding" data-animation="fadeInRight">
           <div class="timeline-panel right">
             <h4>Lunch</h4>
             <p>All</p>
-            <span class="date">12:15 - 13:15</span>
+            <span class="date"><b>12:15 - 13:15</b></span>
           </div>
         </li>
             <li class="animated hiding" data-animation="fadeInLeft">
           <div class="timeline-panel left">
             <h4>Breakout</h4>
             <p>Christoph Roscheck & Arne Laudien</p>
-            <span class="date">Basics of customer-centric measurement: Fundamentals, Benefits & Data Privacy | 13:15 - 14:00</span>
+            <span class="date">Basics of customer-centric measurement: Fundamentals, Benefits & Data Privacy | <b>13:15 - 14:00</b></span>
           </div>
         </li>
               <li class="animated hiding" data-animation="fadeInLeft">
           <div class="timeline-panel left">
             <h4>Breakout</h4>
             <p>Miriam Tappe</p>
-            <span class="date">Measuring Customer Journey from Online to your Store | 13:15 - 14:00</span>
+            <span class="date">Measuring Customer Journey from Online to your Store | <b>13:15 - 14:00</b></span>
           </div>
         </li>
            <li class="animated hiding" data-animation="fadeInRight">
           <div class="timeline-panel right">
             <h4>Breakout</h4>
             <p>Jan Wittek</p>
-            <span class="date">14:00 - 14:45 | Google Analytics und Cross-Channel Attribution</span>
+            <span class="date"><b>14:00 - 14:45 | Google Analytics und Cross-Channel Attribution</b></span>
           </div>
         </li>
             <li class="animated hiding" data-animation="fadeInRight">
           <div class="timeline-panel right">
             <h4>Breakout</h4>
             <p>Livia von Mitschke-Collande</p>
-            <span class="date">14:00 - 14:45 | YouTube for Performance & Measurement Best Practices</span>
+            <span class="date"><b>14:00 - 14:45</b> | YouTube for Performance & Measurement Best Practices</span>
           </div>
         </li>
             <li class="animated hiding" data-animation="fadeInLeft">
           <div class="timeline-panel left">
             <h4>Coffee Break</h4>
             <p>All</p>
-            <span class="date">14:45 - 15:15</span>
+            <span class="date"><b>14:45 - 15:15</b></span>
           </div>
         </li>
             <li class="animated hiding" data-animation="fadeInRight">
           <div class="timeline-panel right">
             <h4>Breakout</h4>
             <p>Martin Loss</p>
-            <span class="date"> 15:15 - 16:00 | Mobile Measurement: AdWords Attribution incl. Cross-Device</span>
+            <span class="date"><b> 15:15 - 16:00</b> | Mobile Measurement: AdWords Attribution incl. Cross-Device</span>
           </div>
         </li>
            <li class="animated hiding" data-animation="fadeInRight">
           <div class="timeline-panel right">
             <h4>Breakout </h4>
             <p>Denis Dautaj & Reemda Tieben</p>
-            <span class="date">15:15 - 16:00 | Automation by Google: AdWords Smart Bidding & DoubleClick Bid Strategies</span>
+            <span class="date"><b>15:15 - 16:00 </b>| Automation by Google: AdWords Smart Bidding & DoubleClick Bid Strategies</span>
           </div>
         </li>
             
@@ -256,7 +256,7 @@ Der Fokus aller Sessions soll auf der Umsetzung dieser unterschiedlichen Lösung
           <div class="timeline-panel left">
             <h4>Keynote: Future of Attribution</h4>
             <p>tbd</p>
-            <span class="date">The Future of Attribution | 16:00 - 16:45</span>
+            <span class="date">The Future of Attribution | <b>16:00 - 16:45</b></span>
           </div>
         </li>
 	   <li class="animated hiding" data-animation="fadeInRight">
@@ -270,7 +270,7 @@ Der Fokus aller Sessions soll auf der Umsetzung dieser unterschiedlichen Lösung
           <div class="timeline-panel left">
             <h4>Networking</h4>
             <p>All</p>
-            <span class="date">17:00 - 17:45</span>
+            <span class="date"><b>17:00 - 17:45</b></span>
           </div>
         </li>
 	<!--<li class="animated hiding" data-animation="fadeInRight">
