--- a/index.html
+++ b/index.html
@@ -360,11 +360,11 @@ Der Fokus aller Sessions soll auf der Umsetzung dieser unterschiedlichen Lösung
  <section id="call-to-action">
         <div class="col-sm-5 col-sm-offset-2 col-md-12 col-md-offset-0">
       <div class="title">
-        <h1>Buddakan</h1>
+        <h1>Location</h1>
         <hr>
       </div>
-      <p>That seems to be the philosophy that Stephen Starr brought to Buddakan, a restaurant as flashy as any this city has seen. Buddakan is the apotheosis, at least for the next 60 seconds, of a distinct genre: the post-millennial urban mess hall as supersize cocktail lounge with superstylized dishes, which chart a far-out trip to the Far East. The specific cuisine in its sights is Chinese, and the real surprise is how good many of Buddakan's alternately faithful and fanciful interpretations of it are. A restaurant this sexy doesn't need to be smart.</p>
-      <a href="https://www.google.de/maps/place/Buddakan/@40.7422787,-74.0048194,15z/data=!4m5!3m4!1s0x0:0x4f1608274f5e6fe6!8m2!3d40.7422787!4d-74.0048194" target="_blank" class="btn btn-custom">Map</a>
+      <p>Veranstaltungsort ist Google Hamburg, ABC-Straße 19, 20354 Hamburg.</p>
+      <a href="https://www.google.de/maps/place/Google+Hamburg/@53.5539165,9.984051,17z/data=!3m1!4b1!4m5!3m4!1s0x47b18f19fdd376f9:0xc5a01fe4dcfa14b6!8m2!3d53.5539165!4d9.9862397" target="_blank" class="btn btn-custom">Map</a>
 	<div class="col-sm-5 col-sm-offset-2 col-md-12 col-md-offset-0">
       <div class="title">  
 	<h1>JIMMY</h1>
