--- a/index.html
+++ b/index.html
@@ -367,14 +367,14 @@ Der Fokus aller Sessions soll auf der Umsetzung dieser unterschiedlichen Lösung
       <a href="https://www.google.de/maps/place/Google+Hamburg/@53.5539165,9.984051,17z/data=!3m1!4b1!4m5!3m4!1s0x47b18f19fdd376f9:0xc5a01fe4dcfa14b6!8m2!3d53.5539165!4d9.9862397" target="_blank" class="btn btn-custom">Map</a>
 	<div class="col-sm-5 col-sm-offset-2 col-md-12 col-md-offset-0">
       <div class="title">  
-	      <hr>
 	<h1>Hotelempfehlungen</h1>
         <hr>
       </div>
-		<h3> Motel One Hamburg Am Michel<h3/>
-      <p>18 stories high atop The James Hotel in Soho, JIMMY is a contemporary interpretation of the classic pub, with a 1970’s New York twist. Created and curated by David Rabin and Johnny Swet, the atmosphere is intimate and refined, with lingham wood floors, swank modular furniture, dark cinnamon glazed tile walls, and a working fireplace – all surrounded by 14’ windows with panoramic views of Midtown, Wall Street, the Hudson River, and the bridges spanning the East River.</p>
+		<h3> Motel One Hamburg Am Michel</h3>
+      <p>Dieses moderne, preisgünstige Hotel in der Nähe des Alten Elbparks liegt nur 4 Gehminuten vom Hamburg Museum und 1,8 km vom Messe- und Kongresszentrum Hamburg entfernt. </p>
       <a href="https://www.google.de/maps/place/Hotel+Motel+One+Hamburg+Am+Michel/@53.5497262,9.9727742,17z/data=!3m1!4b1!4m5!3m4!1s0x47b18f11e8f3e1d5:0x176269e9e8d14bc7!8m2!3d53.549723!4d9.9749629?hl=de" target="_blank" class="btn btn-custom">Map</a>
     </div>
+        <hr>
 	<div class="col-sm-5 col-sm-offset-2 col-md-12 col-md-offset-0">
       <div class="title">  
 	<h1>Walker Hotel Greenwich Village</h1>
