--- a/index.html
+++ b/index.html
@@ -377,11 +377,11 @@ Der Fokus aller Sessions soll auf der Umsetzung dieser unterschiedlichen Lösung
         <hr>
 	<div class="col-sm-5 col-sm-offset-2 col-md-12 col-md-offset-0">
       <div class="title">  
-	<h1>Walker Hotel Greenwich Village</h1>
+	<h3>Park Hyatt Hamburg</h3>
         <hr>
       </div>
-      <p>This retro-chic hotel in Greenwich Village is a 4-minute walk from the West 14th Street subway station and a 7-minute walk from Union Square.</p>
-      <a href="https://www.google.de/maps/place/Walker+Hotel+Greenwich+Village/@40.7362184,-73.9966292,15z/data=!4m5!3m4!1s0x0:0x23246292c8950105!8m2!3d40.7362184!4d-73.9966292" target="_blank" class="btn btn-custom">Map</a>
+      <p>Das elegante Luxushotel liegt nahe der Einkaufsmeile Mönckebergstraße. Die Hamburger Kunsthalle ist 1 km und die St. Pauli Landungsbrücken im Hamburger Hafen sind 2,6 km entfernt.</p>
+      <a href="https://www.google.de/maps/place/Park+Hyatt+Hamburg/@53.5508278,10.000941,17z/data=!3m1!4b1!4m5!3m4!1s0x47b18ee233757629:0xa4cd68e2b5bdf873!8m2!3d53.5508278!4d10.0031297" target="_blank" class="btn btn-custom">Map</a>
     </div>
   </section>
   <!-- End Call to action -->
